--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,70 @@ custom_js: projects
             <!-- Company 1 -->
             <article class="project-card company-card">
                 <div class="card-header">
+                    <h3>realxreal.ai</h3>
+                    <div class="card-tags">
+                        <span class="tag">Active</span>
+                        <span class="tag">2025-Present</span>
+                    </div>
+                </div>
+                <p class="card-description">
+                    realxreal is a trusted contacts app where each connection is verified through shared memories you’ve lived together.
+
+                    Instead of passwords, phone numbers, or server checks, your phone can recognize people the same way you do–through shared memories.
+
+                    Before a call, message, or video chat begins, the app confirms that both people are who they say they are instantly, securely, and privately.
+                </p>
+                <div class="card-links">
+                    <a href="https://www.realxreal.app" target="_blank" class="link-button primary">
+                        Visit Site →
+                    </a>
+                    <a href="https://www.realxreal.app" target="_blank" class="link-button secondary">
+                        <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 0.297C5.373 0.297 0 5.67 0 12.297c0 5.286 3.438 9.773 8.205 11.387 0.6 0.111 0.82-0.261 0.82-0.577 0-0.285-0.011-1.04-0.017-2.042-3.338 0.726-4.042-1.61-4.042-1.61-0.546-1.386-1.333-1.755-1.333-1.755-1.089-0.745 0.083-0.729 0.083-0.729 1.205 0.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495 0.997 0.108-0.775 0.418-1.305 0.762-1.605-2.665-0.304-5.466-1.332-5.466-5.931 0-1.31 0.469-2.381 1.236-3.221-0.124-0.303-0.535-1.524 0.117-3.176 0 0 1.008-0.323 3.3 1.23a11.47 11.47 0 013.003-0.404c1.02 0.005 2.045 0.138 3.003 0.404 2.289-1.553 3.295-1.23 3.295-1.23 0.654 1.653 0.243 2.874 0.12 3.176 0.77 0.84 1.233 1.911 1.233 3.221 0 4.609-2.807 5.625-5.479 5.921 0.429 0.369 0.823 1.096 0.823 2.21 0 1.594-0.015 2.877-0.015 3.267 0 0.319 0.216 0.694 0.825 0.576C20.565 22.066 24 17.584 24 12.297 24 5.67 18.627 0.297 12 0.297z"/>
+                        </svg>
+                        GitHub
+                    </a>
+                </div>
+                <!-- Optional: Embed preview -->
+                <div class="site-preview">
+                    <iframe src="https://www.realxreal.app" loading="lazy" title="Company 1 Preview"></iframe>
+                    <div class="preview-overlay">Click to visit site</div>
+                </div>
+            </article>
+
+            <!-- Company 2 -->
+            <article class="project-card company-card">
+                <div class="card-header">
+                    <h3>OpenBWC (Body-Worn-Camera)</h3>
+                    <div class="card-tags">
+                        <span class="tag">Active</span>
+                        <span class="tag">2024–Present</span>
+                    </div>
+                </div>
+                <p class="card-description">
+                    Leveraging AI to ethically and transparently analyze Body-Worn Camera footage for evidence-based policing reform.
+                </p>
+                <div class="card-links">
+                    <a href="https://www.openbwc.org" target="_blank" class="link-button primary">
+                        Visit Site →
+                    </a>
+                    <a href="https://github.com/OpenBWC" target="_blank" class="link-button secondary">
+                        <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 0.297C5.373 0.297 0 5.67 0 12.297c0 5.286 3.438 9.773 8.205 11.387 0.6 0.111 0.82-0.261 0.82-0.577 0-0.285-0.011-1.04-0.017-2.042-3.338 0.726-4.042-1.61-4.042-1.61-0.546-1.386-1.333-1.755-1.333-1.755-1.089-0.745 0.083-0.729 0.083-0.729 1.205 0.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495 0.997 0.108-0.775 0.418-1.305 0.762-1.605-2.665-0.304-5.466-1.332-5.466-5.931 0-1.31 0.469-2.381 1.236-3.221-0.124-0.303-0.535-1.524 0.117-3.176 0 0 1.008-0.323 3.3 1.23a11.47 11.47 0 013.003-0.404c1.02 0.005 2.045 0.138 3.003 0.404 2.289-1.553 3.295-1.23 3.295-1.23 0.654 1.653 0.243 2.874 0.12 3.176 0.77 0.84 1.233 1.911 1.233 3.221 0 4.609-2.807 5.625-5.479 5.921 0.429 0.369 0.823 1.096 0.823 2.21 0 1.594-0.015 2.877-0.015 3.267 0 0.319 0.216 0.694 0.825 0.576C20.565 22.066 24 17.584 24 12.297 24 5.67 18.627 0.297 12 0.297z"/>
+                        </svg>
+                        GitHub
+                    </a>
+                </div>
+                <!-- Optional: Embed preview -->
+                <div class="site-preview">
+                    <iframe src="https://www.openbwc.org" loading="lazy" title="Company 1 Preview"></iframe>
+                    <div class="preview-overlay">Click to visit site</div>
+                </div>
+            </article>
+
+            <!-- Company 3 -->
+            <article class="project-card company-card">
+                <div class="card-header">
                     <h3>Company Name 1</h3>
                     <div class="card-tags">
                         <span class="tag">Active</span>
@@ -45,44 +109,6 @@ custom_js: projects
                 </div>
             </article>
 
-            <!-- Company 2 -->
-            <article class="project-card company-card">
-                <div class="card-header">
-                    <h3>Company Name 2</h3>
-                    <div class="card-tags">
-                        <span class="tag">Active</span>
-                        <span class="tag">2022–Present</span>
-                    </div>
-                </div>
-                <p class="card-description">
-                    Another company description highlighting the main value proposition.
-                </p>
-                <div class="card-links">
-                    <a href="https://company2.com" target="_blank" class="link-button primary">
-                        Visit Site →
-                    </a>
-                </div>
-            </article>
-
-            <!-- Company 3 -->
-            <article class="project-card company-card">
-                <div class="card-header">
-                    <h3>Company Name 3</h3>
-                    <div class="card-tags">
-                        <span class="tag">Acquired</span>
-                        <span class="tag">2020–2023</span>
-                    </div>
-                </div>
-                <p class="card-description">
-                    Third company with interesting exit story or current status.
-                </p>
-                <div class="card-links">
-                    <a href="https://company3.com" target="_blank" class="link-button primary">
-                        Visit Site →
-                    </a>
-                </div>
-            </article>
-
         </div>
     </section>
 
@@ -90,7 +116,7 @@ custom_js: projects
     <section class="project-section">
         <h2 class="section-heading">Open Source Projects</h2>
         <p class="section-description">
-            Pulling from <a href="https://github.com/Trust-Worthy" target="_blank">@Trust-Worthy</a> on GitHub
+            <a href="https://github.com/Trust-Worthy" target="_blank">@Trust-Worthy</a> on GitHub
         </p>
         
         <!-- Loading State -->
