--- a/projects.html
+++ b/projects.html
@@ -82,20 +82,20 @@ custom_js: projects
             <!-- Company 3 -->
             <article class="project-card company-card">
                 <div class="card-header">
-                    <h3>Company Name 1</h3>
+                    <h3>Goshen Digital Security</h3>
                     <div class="card-tags">
                         <span class="tag">Active</span>
-                        <span class="tag">2023–Present</span>
+                        <span class="tag">2022–Present</span>
                     </div>
                 </div>
                 <p class="card-description">
-                    Brief description of what this company does. Keep it to 2-3 sentences.
+                    Democratize cybersecurity by delivering practical tools, tailored assessments, and real-world education to the entrepreneurs, nonprofits, and businesses that need it most.
                 </p>
                 <div class="card-links">
-                    <a href="https://company1.com" target="_blank" class="link-button primary">
+                    <a href="https://goshendigitalsecurity.com" target="_blank" class="link-button primary">
                         Visit Site →
                     </a>
-                    <a href="https://github.com/company1" target="_blank" class="link-button secondary">
+                    <a href="https://goshendigitalsecurity.com" target="_blank" class="link-button secondary">
                         <svg class="icon" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M12 0.297C5.373 0.297 0 5.67 0 12.297c0 5.286 3.438 9.773 8.205 11.387 0.6 0.111 0.82-0.261 0.82-0.577 0-0.285-0.011-1.04-0.017-2.042-3.338 0.726-4.042-1.61-4.042-1.61-0.546-1.386-1.333-1.755-1.333-1.755-1.089-0.745 0.083-0.729 0.083-0.729 1.205 0.084 1.84 1.236 1.84 1.236 1.07 1.834 2.809 1.304 3.495 0.997 0.108-0.775 0.418-1.305 0.762-1.605-2.665-0.304-5.466-1.332-5.466-5.931 0-1.31 0.469-2.381 1.236-3.221-0.124-0.303-0.535-1.524 0.117-3.176 0 0 1.008-0.323 3.3 1.23a11.47 11.47 0 013.003-0.404c1.02 0.005 2.045 0.138 3.003 0.404 2.289-1.553 3.295-1.23 3.295-1.23 0.654 1.653 0.243 2.874 0.12 3.176 0.77 0.84 1.233 1.911 1.233 3.221 0 4.609-2.807 5.625-5.479 5.921 0.429 0.369 0.823 1.096 0.823 2.21 0 1.594-0.015 2.877-0.015 3.267 0 0.319 0.216 0.694 0.825 0.576C20.565 22.066 24 17.584 24 12.297 24 5.67 18.627 0.297 12 0.297z"/>
                         </svg>
@@ -104,7 +104,7 @@ custom_js: projects
                 </div>
                 <!-- Optional: Embed preview -->
                 <div class="site-preview">
-                    <iframe src="https://company1.com" loading="lazy" title="Company 1 Preview"></iframe>
+                    <iframe src="https://www.goshendigitalsecurity.com" loading="lazy" title="Company 1 Preview"></iframe>
                     <div class="preview-overlay">Click to visit site</div>
                 </div>
             </article>
